--- a/my-app/src/routes/GamePage/routes/Start/style.module.css
+++ b/my-app/src/routes/GamePage/routes/Start/style.module.css
@@ -1,7 +1,11 @@
 .flex {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 40px;
+}
+
+.card {
     width: 100%;
-    height: 100vh;
+    height: 380px;
+    cursor: pointer;
 }
