--- a/my-app/src/routes/GamePage/routes/Finish/style.module.css
+++ b/my-app/src/routes/GamePage/routes/Finish/style.module.css
@@ -1,1 +1,13 @@
+.flex {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
+.card {
+    width: 100%;
+    height: 380px;
+    cursor: pointer;
+}
