--- a/my-app/src/routes/GamePage/routes/Start/style.module.css
+++ b/my-app/src/routes/GamePage/routes/Start/style.module.css
@@ -1,6 +1,6 @@
 .flex {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: repeat(5, 1fr);
     grid-gap: 40px;
 }
 
@@ -8,4 +8,8 @@
     width: 100%;
     height: 380px;
     cursor: pointer;
+}
+
+.buttons {
+    margin-bottom: 20px;
 }
